# flash-cards

./: Cargo.toml
migrations/2020-04-12-183017_create_decks/: down.sql  up.sql
migrations/2020-04-25-111123_create_users/: up.sql
src/: decks.rs  main.rs  schema.rs  utils.rs
src/decks/: handler.rs  model.rs  repository.rs  router.rs
src/users/: handler.rs  model.rs  repository.rs  router.rs
src/utils/: error_helpers.rs
