[package]
name = "flash-cards"
version = "0.1.0"
authors = ["Bjørnar Dalsnes <bjornar.dalsnes@knowit.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "serde_json"] }
dotenv = "0.9.0"
rocket = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
